--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@ if($_POST['submit']!=""){
                             <div class="formgroup"><input type="text" name="pin" placeholder="Locality / Property Name" required/></div>
                             <div class="formgroup"><textarea name="message" id="" cols="30" rows="4" placeholder="Message"></textarea></div>
                             <div class="formgroup text-center">
-                                <div class="g-recaptcha" data-sitekey="(6LfH1nUgAAAAAHv7q6mP9mMJxi37WrWZLVSdwu-q)"></div>
+                                <div class="g-recaptcha" data-sitekey="6LfH1nUgAAAAAHv7q6mP9mMJxi37WrWZLVSdwu-q" ></div>
                                 <button type="submit" name="submit" value="SEND" id="form-submit" onclick="checkRecaptcha();">SEND</button></div>
                              <span class="error"> <?php echo $nameErr;?></span>
                              </form>
